--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,78 @@
   <version>1.0-SNAPSHOT</version>
   <name>canno Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+  <!--<dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+  </dependencies>-->
+
+  <!-- Inherit defaults from Spring Boot -->
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.4.0.RELEASE</version>
+  </parent>
+
+  <!-- Add typical dependencies for a web application -->
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
   </dependencies>
+
+  <!-- Package as an executable jar -->
   <build>
-    <finalName>canno</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+<!--      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.2.5.v20141112</version>
+        <configuration>
+          <stopKey>STOP!!</stopKey>
+          <stopPort>9095</stopPort>
+          <daemon>true</daemon>
+          <httpConnector>
+            <port>8001</port>
+          </httpConnector>
+          <webApp>
+            <contextPath>/</contextPath>
+            <webInfIncludeJarPattern>^((?!bouncycastle).)*$</webInfIncludeJarPattern>
+          </webApp>
+        </configuration>
+        &lt;!&ndash;<executions>&ndash;&gt;
+        &lt;!&ndash;<execution>&ndash;&gt;
+        &lt;!&ndash;<id>start-jetty</id>&ndash;&gt;
+        &lt;!&ndash;<phase>pre-integration-test</phase>&ndash;&gt;
+        &lt;!&ndash;<goals>&ndash;&gt;
+        &lt;!&ndash;<goal>stop</goal>&ndash;&gt;
+        &lt;!&ndash;<goal>start</goal>&ndash;&gt;
+        &lt;!&ndash;</goals>&ndash;&gt;
+        &lt;!&ndash;<configuration>&ndash;&gt;
+        &lt;!&ndash;<scanIntervalSeconds>0</scanIntervalSeconds>&ndash;&gt;
+        &lt;!&ndash;&lt;!&ndash;<daemon>true</daemon> &ndash;&gt;&ndash;&gt;
+        &lt;!&ndash;<stopKey>STOP!!</stopKey>&ndash;&gt;
+        &lt;!&ndash;<stopPort>9099</stopPort>&ndash;&gt;
+        &lt;!&ndash;</configuration>&ndash;&gt;
+        &lt;!&ndash;</execution>&ndash;&gt;
+        &lt;!&ndash;<execution>&ndash;&gt;
+        &lt;!&ndash;<id>stop-jetty</id>&ndash;&gt;
+        &lt;!&ndash;<phase>post-integration-test</phase>&ndash;&gt;
+        &lt;!&ndash;<goals>&ndash;&gt;
+        &lt;!&ndash;<goal>stop</goal>&ndash;&gt;
+        &lt;!&ndash;</goals>&ndash;&gt;
+        &lt;!&ndash;</execution>&ndash;&gt;
+        &lt;!&ndash;</executions>&ndash;&gt;
+      </plugin>-->
+    </plugins>
   </build>
+
 </project>
